Finished "Better codebases" frontpage section

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -125,22 +125,26 @@ layout: default
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h1>Better code</h1>
+      <h1>Better codebases</h1>
       <div class="frontpage-left-feature frontpage-lambda">
         <h3>Functional</h3>
-        <p>Lorem ipsum blabla asdask jeckjecaoieoaec aec kajs dkajskj sdasde</p>
+        <p>Avoid intricate stateful programs, using clean input/output functions
+        over observable streams.</p>
       </div>
-      <div class="frontpage-left-feature frontpage-lambda">
-        <h3>Less is better</h3>
-        <p>Lorem ipsum blabla asdask jeckjecaoieoaec aec kajs dkajskj sdasde</p>
+      <div class="frontpage-left-feature frontpage-less">
+        <h3>Less is more</h3>
+        <p>ReactiveX's operators often reduce what was once a elaborate challenge
+        into a few lines of code.</p>
       </div>
-      <div class="frontpage-left-feature frontpage-lambda">
+      <div class="frontpage-left-feature frontpage-lightning">
         <h3>Async error handling</h3>
-        <p>Proper asynchronous error handling, the try/catch, etc</p>
+        <p>Traditional try/catch is powerless for errors in asynchronous computations,
+        but ReactiveX is equiped with proper mechanisms for handling errors.</p>
       </div>
-      <div class="frontpage-left-feature frontpage-lambda">
+      <div class="frontpage-left-feature frontpage-concurrency">
         <h3>Concurrency made easy</h3>
-        <p>Abstract away low-level threading, synchronization, concurrency</p>
+        <p>Observables and Schedulers in ReactiveX allow the programmer to
+        abstract away low-level threading, synchronization, and concurrency issues.</p>
       </div>
     </div>
   </div>
