--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -116,18 +116,39 @@
 .frontpage-left-feature {
   text-align: left;
   margin-top: @margin-large;
-  margin-left: 3rem;
+  margin-left: 6rem;
+  position: relative;
   h3 {
     text-align: left;
   }
-  &.frontpage-lambda:before {
-    content: 'λ';
+  &:before {
+    content: '';
     color: @gray;
     display: block;
     position: absolute;
     font-size: 4rem;
-    top: 4.5rem;
-    left: -1px;
+    top: -1px;
+    left: -5.5rem;
+    width: 3rem;
+    height: 5rem;
+    margin-top: @margin-small;
+    background-repeat: no-repeat;
+    background-size: 3rem;
+  }
+  &.frontpage-lambda:before {
+    background-image: url("/assets/lambda.svg");
+    background-size: 2.5rem;
+  }
+  &.frontpage-less:before {
+    background-image: url("/assets/less.svg");
+  }
+  &.frontpage-lightning:before {
+    background-image: url("/assets/lightning.svg");
+    background-size: 2.5rem;
+  }
+  &.frontpage-concurrency:before {
+    background-image: url("/assets/concurrency.svg");
+    top: 0.5rem;
   }
 }
 
