--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -7,7 +7,7 @@ layout: default
     <div class="container">
       <div class="col-md-8 col-md-offset-2">
         <h1 class="title"><img src="{{ site.url }}/assets/Rx_Logo_S.png" />{{ site.name }}</h1>
-        <h2 class="value-proposition">A framework for asynchronous programming<br />with observable streams</h2>
+        <h2 class="value-proposition">An API for asynchronous programming<br />with observable streams</h2>
         <a class="btn btn-special btn-lg" href="{{ site.url }}/languages.html">Choose your platform</a>
       </div>
     </div>
@@ -154,7 +154,7 @@ layout: default
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1><em>Reactive Revolution</em></h1>
-      <h3>ReactiveX is more than a framework, it's an idea and a breakthrough in programming. It has inspired several other frameworks, and even programming languages.</h3>
+      <h3>ReactiveX is more than an API, it's an idea and a breakthrough in programming. It has inspired several other APIs and frameworks, and even programming languages.</h3>
     </div>
   </div>
 
