--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -154,7 +154,7 @@ layout: default
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1><em>Reactive Revolution</em></h1>
-      <h3>ReactiveX is more than an API, it's an idea and a breakthrough in programming. It has inspired several other APIs and frameworks, and even programming languages.</h3>
+      <h3>ReactiveX is more than an API, it's an idea and a breakthrough in programming. It has inspired several other APIs, frameworks, and even programming languages.</h3>
     </div>
   </div>
 
