Minor fix to page title; added C++ mention to frontpage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -110,7 +110,7 @@ layout: default
     <div class="col-md-4">
       <div class="frontpage-feature">
         <h2 class="em-color2">CROSS-PLATFORM</h2>
-        <p>Available for idiomatic Java, Scala, C#, Clojure, JavaScript, Python, Groovy, JRuby, and others</p>
+        <p>Available for idiomatic Java, Scala, C#, C++, Clojure, JavaScript, Python, Groovy, JRuby, and others</p>
       </div>
     </div>
     <div class="col-md-3">
