Fixed grammar on frontpage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -133,7 +133,7 @@ layout: default
       </div>
       <div class="frontpage-left-feature frontpage-less">
         <h3>Less is more</h3>
-        <p>ReactiveX's operators often reduce what was once a elaborate challenge
+        <p>ReactiveX's operators often reduce what was once an elaborate challenge
         into a few lines of code.</p>
       </div>
       <div class="frontpage-left-feature frontpage-lightning">
