--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -134,9 +134,11 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/js/jquery/1.11.0/jquery.min.js"></script>
 
-    {{ content }}
+    <div class="site-content">
+      {{ content }}
+    </div>
 
-    <div class="footer">
+    <footer>
       <div class="container">
 
         <div class="row">
@@ -178,7 +180,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
 
     <!-- back to top link -->
     <span id="top-link-block" class="hidden">
