--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -163,11 +163,12 @@ layout: default
   <div class="row">
     <div class="col-md-8 col-md-offset-2 frontpage-logos">
       <h1>We use ReactiveX</h1>
+      <a href="http://rx.codeplex.com/" class="frontpage-logo microsoft-logo"></a>
       <a href="http://netflix.github.io" class="frontpage-logo netflix-logo"></a>
       <a href="http://github.com/" class="frontpage-logo github-logo"></a>
-      <a href="http://www.couchbase.com/" class="frontpage-logo couchbase-logo"></a>
       <a href="http://soundcloud.com/" class="frontpage-logo soundcloud-logo"></a>
-      <a href="http://rx.codeplex.com/" class="frontpage-logo microsoft-logo"></a>
+      <a href="https://www.trello.com" class="frontpage-logo trello-logo"></a>
+      <a href="http://www.couchbase.com/" class="frontpage-logo couchbase-logo"></a>
       <a href="http://www.futurice.com" class="frontpage-logo futurice-logo"></a>
     </div>
   </div>
