--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -176,7 +176,7 @@
 }
 .github-logo {
   background-image: url("/assets/github-logo.png");
-  background-size: auto 58%;
+  background-size: auto 53%;
 }
 .couchbase-logo {
   background-image: url("/assets/couchbase-logo.png");
@@ -192,7 +192,11 @@
 }
 .futurice-logo {
   background-image: url("/assets/futurice-logo.jpg");
-  background-size: auto 60%;
+  background-size: auto 70%;
+}
+.trello-logo {
+  background-image: url("/assets/trello-logo.png");
+  background-size: auto 70%;
 }
 
 .ps-top-to-bottom {
