Add logos for SeatGeek, ooVoo, and Welbe

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -168,8 +168,11 @@ layout: default
       <a href="http://github.com/" class="frontpage-logo github-logo"></a>
       <a href="http://soundcloud.com/" class="frontpage-logo soundcloud-logo"></a>
       <a href="https://www.trello.com" class="frontpage-logo trello-logo"></a>
+      <a href="https://seatgeek.com/" class="frontpage-logo seatgeek-logo"></a>
+      <a href="http://www.oovoo.com" class="frontpage-logo oovoo-logo"></a>
       <a href="http://www.couchbase.com/" class="frontpage-logo couchbase-logo"></a>
       <a href="http://www.futurice.com" class="frontpage-logo futurice-logo"></a>
+      <a href="https://www.welbe.com/" class="frontpage-logo welbe-logo"></a>
     </div>
   </div>
 
