Add logo for Treehouse

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -168,6 +168,7 @@ layout: default
       <a href="http://github.com/" class="frontpage-logo github-logo"></a>
       <a href="http://soundcloud.com/" class="frontpage-logo soundcloud-logo"></a>
       <a href="https://www.trello.com" class="frontpage-logo trello-logo"></a>
+      <a href="http://teamtreehouse.com/" class="frontpage-logo treehouse-logo"></a>
       <a href="https://seatgeek.com/" class="frontpage-logo seatgeek-logo"></a>
       <a href="http://www.oovoo.com" class="frontpage-logo oovoo-logo"></a>
       <a href="http://www.couchbase.com/" class="frontpage-logo couchbase-logo"></a>
