--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -210,6 +210,10 @@
   background-image: url("/assets/welbe-logo.png");
   background-size: auto 70%;
 }
+.treehouse-logo {
+  background-image: url("/assets/treehouse-logo.png");
+  background-size: auto 50%;
+}
 
 .ps-top-to-bottom {
   position: relative;
