Fixed footer link colors on hover

--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -97,6 +97,9 @@ footer {
   }
   a {
     color: @gray-light;
+    &:hover, &:active {
+      color: @gray-lighter;
+    }
   }
   ul.footer-section > li {
     line-height: 1.5rem;
