added applied duality logo to frontpage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -163,6 +163,7 @@ layout: default
   <div class="row">
     <div class="col-md-8 col-md-offset-2 frontpage-logos">
       <h1>We use ReactiveX</h1>
+      <a href="http://www.applied-duality.com/" class="frontpage-logo applied-duality-logo"></a>
       <a href="http://rx.codeplex.com/" class="frontpage-logo microsoft-logo"></a>
       <a href="http://netflix.github.io" class="frontpage-logo netflix-logo"></a>
       <a href="http://github.com/" class="frontpage-logo github-logo"></a>
