--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -170,6 +170,10 @@
   background-position: center center;
   background-repeat: no-repeat;
 }
+.applied-duality-logo {
+  background-image: url("/assets/applied-duality-logo.jpg");
+  background-size: auto 55%;
+}
 .netflix-logo {
   background-image: url("/assets/netflix-logo.png");
   background-size: auto 60%;
