--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -11,6 +11,7 @@
 @import "variables.less";
 @import "frontpage.less";
 @import "frontpage-diagram.less";
+@import "operators.less";
 
 html {
   font-size: @font-size-base; // defines rem
