Reorganized operators under documentation
* We now have a documentations submenu on the top nav bar and on
the footer of every page.
* documentation/operators.html is a list of all operators, linking
to their individual pages
* documentation/operators/buffer.html is the canonical example of
how an operator page should be layouted. The collape behavior was
jquery but it was replaced with bootstrap's own collapse. Check
buffer.html to see the usage of {% lang_operator %}, a custom Jekyll
tag.

--- a/_includes/docs-section-ul.html
+++ b/_includes/docs-section-ul.html
@@ -1,9 +1,7 @@
-<li><em>Coming soon</em></li>
-<!-- Uncomment only when ready
-<li><a href="#">Observable</a></li>
-<li><a href="#">Operators</a></li>
-<li><a href="#">Subject</a></li>
-<li><a href="#">Scheduler</a></li>
-<li><a href="#">Backpressure</a></li>
-<li><a href="#">Error handling</a></li>
- -->
+<li><a href="{{ site.url }}/documentation.html">Getting Started</a></li>
+<li><a href="{{ site.url }}/documentation/observable.html">Observable</a></li>
+<li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
+<li><a href="{{ site.url }}/documentation/subject.html">Subject</a></li>
+<li><a href="{{ site.url }}/documentation/scheduler.html">Scheduler</a></li>
+<li><a href="{{ site.url }}/documentation/backpressure.html">Backpressure</a></li>
+<li><a href="{{ site.url }}/documentation/errors.html">Error handling</a></li>
