--- a/styles/operators.less
+++ b/styles/operators.less
@@ -3,9 +3,9 @@ span.operator {
   font-family: monospace;
 }
 
-.operator-language-description {
+.operators-by-language {
   figure.variant {
-    margin-top: 3rem;
+    margin-bottom: 5rem;
     figcaption {
       margin-top: 1rem;
     }
