--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{{ site.url }}/intro.html">Getting started</a></li>
+            <li><a href="{{ site.url }}/intro.html">Introduction</a></li>
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
