--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="{{ site.url }}/assets/Rx_Icon.png" style="height:90%;"/> {{ site.name }}</a>
+          <a class="navbar-brand" href="/"><img src="{{ site.url }}/assets/Rx_Icon.png" style="height:90%;" alt=""/> {{ site.name }}</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -173,7 +173,7 @@
 
         <div class="row">
           <div class="col-sm-12 disclaimer">
-            <img class="footer-logo" src="{{ site.url }}/assets/Rx_Logo_BW_S.png" />
+            <img class="footer-logo" src="{{ site.url }}/assets/Rx_Logo_BW_S.png" alt="" />
             <a href="{{ site.url }}">ReactiveX<span class="external-link"></span></a> is a collection of open source projects. The content of this
             page is licensed under Creative Commons Attribution 3.0 License, and
             code samples are licensed under the BSD License.
