--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -23,7 +23,7 @@ layout: default
     <div class="col-sm-4">
     <ul class="side-menu">
       <li><a href="{{ site.url }}/documentation.html">Getting Started</a></li>
-      <li><a href="{{ site.url }}/documentation/observable.html">Observable</b></a></li>
+      <li><a href="{{ site.url }}/documentation/observable.html">Observable</a></li>
       <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
       <li><a href="{{ site.url }}/documentation/subject.html">Subject</a></li>
       <li><a href="{{ site.url }}/documentation/scheduler.html">Scheduler</a></li>
