add limit(); clarify collect(); reduce HTML errors

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -6,7 +6,7 @@ layout: default
   <div class="jumbotron">
     <div class="container">
       <div class="col-md-8 col-md-offset-2">
-        <h1 class="title"><img src="{{ site.url }}/assets/Rx_Logo_S.png" />{{ site.name }}</h1>
+        <h1 class="title"><img src="{{ site.url }}/assets/Rx_Logo_S.png" alt="ReactiveX" />{{ site.name }}</h1>
         <h2 class="value-proposition">An API for asynchronous programming<br />with observable streams</h2>
         <a class="btn btn-special btn-lg" href="{{ site.url }}/languages.html">Choose your platform</a>
       </div>
@@ -74,19 +74,19 @@ layout: default
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
       <div class="frontpage-feature ps-top-to-bottom">
-        <h2><img src="{{ site.url }}/assets/wand.svg" />CREATE</h2>
+        <h2><img src="{{ site.url }}/assets/wand.svg" alt="Create" />CREATE</h2>
         <p>Easily create event streams or data streams.</p>
       </div>
     </div>
     <div class="col-md-4">
       <div class="frontpage-feature ps-top-to-bottom">
-        <h2><img src="{{ site.url }}/assets/join.svg" />COMBINE</h2>
+        <h2><img src="{{ site.url }}/assets/join.svg" alt="Combine" />COMBINE</h2>
         <p>Compose and transform streams with query-like operators.</p>
       </div>
     </div>
     <div class="col-md-3">
       <div class="frontpage-feature ps-top-to-bottom">
-        <h2><img src="{{ site.url }}/assets/ear.svg" />LISTEN</h2>
+        <h2><img src="{{ site.url }}/assets/ear.svg" alt="Listen" />LISTEN</h2>
         <p>Subscribe to any observable stream to perform side effects.</p>
       </div>
     </div>
