Add embedded RxMarbles for most operators in docs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,10 @@
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css" />
 
+    <!-- Embeddable RxMarbles -->
+    <script defer src="/js/CustomElements.min.js"></script>
+    <script defer src="/js/rx-marbles.js"></script>
+
     <style shim-shadowdom>
         /* This is overriding our styles for body, and it shouldn't.
         body {
