--- a/styles/operators.less
+++ b/styles/operators.less
@@ -16,6 +16,13 @@ span.operator {
   }
 }
 
+figure.rxmarbles-figure {
+  margin-top: 1rem;
+  figcaption {
+    margin-top: 2rem;
+  }
+}
+
 div.panel-body figure {
   border: 1px solid #ddd;
   border-radius: 4px;
