--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,9 @@
     <script defer src="/js/CustomElements.min.js"></script>
     <script defer src="/js/rx-marbles.js"></script>
 
+    <!-- Code exmaple embedding -->
+    <script src="js/embed.js"></script>
+
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
