Update Futurice logo

--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -197,8 +197,8 @@
   background-size: auto 55%;
 }
 .futurice-logo {
-  background-image: url("/assets/futurice-logo.jpg");
-  background-size: auto 70%;
+  background-image: url("/assets/futurice-logo.svg");
+  background-size: auto 48%;
 }
 .trello-logo {
   background-image: url("/assets/trello-logo.png");
