--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -24,6 +24,7 @@ layout: default
     <ul class="side-menu">
       <li><a href="{{ site.url }}/documentation/observable.html">Observable</a></li>
       <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
+      <li><a href="{{ site.url }}/documentation/single.html">Single</a></li>
       <li><a href="{{ site.url }}/documentation/subject.html">Subject</a></li>
       <li><a href="{{ site.url }}/documentation/scheduler.html">Scheduler</a></li>
     </ul>
