Fixed small typo

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -139,7 +139,7 @@ layout: default
       <div class="frontpage-left-feature frontpage-lightning">
         <h3>Async error handling</h3>
         <p>Traditional try/catch is powerless for errors in asynchronous computations,
-        but ReactiveX is equiped with proper mechanisms for handling errors.</p>
+        but ReactiveX is equipped with proper mechanisms for handling errors.</p>
       </div>
       <div class="frontpage-left-feature frontpage-concurrency">
         <h3>Concurrency made easy</h3>
