--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -216,6 +216,10 @@
   background-image: url("/assets/welbe-logo.png");
   background-size: auto 70%;
 }
+.airbnb-logo {
+  background-image: url("/assets/airbnb-logo.png");
+  background-size: auto 100%;
+}
 .treehouse-logo {
   background-image: url("/assets/treehouse-logo.png");
   background-size: auto 50%;
