--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -217,7 +217,7 @@
   background-size: auto 70%;
 }
 .airbnb-logo {
-  background-image: url("/assets/airbnb-logo.png");
+  background-image: url("/assets/airbnb-logo.jpg");
   background-size: auto 100%;
 }
 .treehouse-logo {
