--- a/_includes/languages-section-ul.html
+++ b/_includes/languages-section-ul.html
@@ -3,5 +3,5 @@
 <li><a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET<span class="external-link"></span></a></li>
 <li><a href="{{ site.url }}/rxscala">RxScala</a></li>
 <li><a href="https://github.com/ReactiveX/RxClojure">RxClojure<span class="external-link"></span></a></li>
-<li><a href="https://github.com/kzaher/RxSwift">RxSwift<span class="external-link"></span></a></li>
+<li><a href="https://github.com/ReactiveX/RxSwift">RxSwift<span class="external-link"></span></a></li>
 <li><a href="{{ site.url }}/languages.html">Others</a></li>
