--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -61,6 +61,7 @@ body {
 .full-page-container {
   .container;
   margin-top: @margin-large;
+  margin-bottom: @margin-extra-large;
 }
 
 .external-link {
@@ -74,7 +75,6 @@ body {
 footer {
   background: @gray-dark;
   padding-bottom: @margin-extra-large;
-  margin-top: @margin-extra-large;
   color: @gray-light;
   box-shadow: inset 0 27px 27px -27px @gray-base;
   .row {
