Change Welbe logo/link to OC Tanner, their parent company

--- a/styles/frontpage.less
+++ b/styles/frontpage.less
@@ -220,9 +220,9 @@
   background-image: url("/assets/oovoo-logo.png");
   background-size: auto 75%;
 }
-.welbe-logo {
-  background-image: url("/assets/welbe-logo.png");
-  background-size: auto 70%;
+.octanner-logo {
+  background-image: url("/assets/octanner-logo.png");
+  background-size: auto 25%;
 }
 .airbnb-logo {
   background-image: url("/assets/airbnb-logo.jpg");
