--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -24,7 +24,7 @@ layout: default
       <ul class="side-menu">
         <li><a href="{{ site.url }}/documentation/cn{{ page.url | replace_first:'/documentation','' | replace_first:'/ko','' | replace_first:'/cn','' }}">简体中文</a></li>
         <li><a href="{{ site.url }}/documentation/ko{{ page.url | replace_first:'/documentation','' | replace_first:'/ko','' | replace_first:'/cn','' }}">한국어</a></li>
-        <li><a href="{{ site.url }}/documentation{{ page.url | replace_first:'/documentation','' }}">English</a></li>
+        <li><a href="{{ site.url }}/documentation{{ page.url | replace_first:'/documentation','' | replace_first:'/ko','' | replace_first:'/cn','' }}">English</a></li>
       </ul>
 
       <ul class="side-menu">
